Fix tags column spacing, wrapping and max height

--- a/src/index.css
+++ b/src/index.css
@@ -167,7 +167,7 @@ input[type="text"] {
   flex-direction: row;
   scale: 100%;
   transition: all 0.2s ease-in-out;
-  gap: 0.2em;
+  gap: 0.3em;
 
   padding-top: 0.3em;
   padding-bottom: 0.3em;
